add "user" path
